# Advanced-Computer-Graphics

PA0/code/include/: element.hpp
PA1/code/include/: camera.hpp  material.hpp  plane.hpp  sphere.hpp  transform.hpp  triangle.hpp
PA1/code/src/: main.cpp
PA2/code/: run_display.sh
PA2/code/include/: material.hpp  object3d.hpp  plane.hpp  triangle.hpp
PA2/code/src/: main.cpp  scene_parser.cpp
PA3/code/include/: camera.hpp  group.hpp  material.hpp  mesh.hpp  plane.hpp  sphere.hpp  triangle.hpp
PA3/code/src/: main.cpp
proj/code/: CMakeLists.txt  run_all.sh
proj/code/include/: camera.hpp  curve.hpp  group.hpp  hit.hpp  kdtree.hpp  material.hpp  mesh.hpp  object3d.hpp  plane.hpp  ray.hpp  sample.hpp  scene_parser.hpp  sphere.hpp  transform.hpp  triangle.hpp
proj/code/src/: image.cpp  kdtree.cpp  main.cpp  mesh.cpp  scene_parser.cpp
proj/code/testcases/: cornell.txt  cornell_mesh.txt  final.txt
proj/code/texture/: amiya.ppm  cornell.ppm  floor.ppm  floor1.ppm
